# Blindference-Agent

./: .env.example  .gitignore  .npmignore  README.md  WHY.md  debug-infer.mjs  debug-infer2.mjs  package-lock.json  package.json  pyproject.toml  setup.sh  test-quorum-log.js  tsconfig.json
.github/workflows/: ci.yml  publish-npm.yml
examples/: agent_demo.py  autonomous_research_agent.py  batch_inference.py  getting_started.ipynb  interactive_chat.py  langchain_rag.py  mock_icl_server.py  multi_turn_chat_agent.py  risk_scoring_agent.py  simple_agent.py  streaming_agent.py  tool_using_agent.py  ts_sdk_server.py  ts_sdk_subprocess.py
integrations/langchain/: __init__.py
js/: .npmignore  package.json
js/src/: agent.ts  cli.ts  client.ts  server.ts
scripts/: cofhe_bridge.mjs
src/: agent.ts  cli.ts  client.ts  crypto.ts  index.ts  server.ts  shim.ts
src/blindference_agent/: __init__.py  cli.py  cofhe_bridge.py  core.py  encryptor.py  icl_client.py  types.py
tests/: conftest.py  test_cli.py  test_encryptor.py  test_types.py
