[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blindference-agent"
version = "0.1.0"
description = "Blindference Agent SDK — build confidential AI agents on the Blindference network."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiohttp>=3.9",
    "pydantic>=2.0",
    "click>=8.0",
    "cryptography>=41.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
langchain = ["langchain>=0.1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
blindference-agent = "blindference_agent.cli:main"

[project.urls]
Homepage = "https://github.com/baync180705/blindference-agent"
Documentation = "https://docs.blindference.xyz"
Repository = "https://github.com/baync180705/blindference-agent"

[tool.hatch.build.targets.wheel]
packages = ["src/blindference_agent"]

[tool.hatch.build.targets.wheel.force-include]
"src/blindference_agent/scripts" = "blindference_agent/scripts"

[tool.pytest.ini_options]
asyncio_mode = "auto"
